--- a/themes/ambiance-dark.css
+++ b/themes/ambiance-dark.css
@@ -4,6 +4,11 @@
 .search-form-fieldset {
     background: #3f3e39;
 }
+.search-form-fieldset, .search-form-fieldset-input {
+    border-radius: 35px;
+    border: solid #2b2a25;
+    border-width: 0.5px;
+}
 [class*="searchForm-action-button-"] {
     color: #F2F2F2
 }
