--- a/themes/ambiance-light.css
+++ b/themes/ambiance-light.css
@@ -261,3 +261,36 @@ body .cg-notify-message.notification-success {
     background-color: #e95420;
     color: #F2F2F2
 }
+header#conversationHeader {
+    background: #e7e6e4;
+}
+div#pm_thread {
+    background: #e7e6e4;
+}
+#conversation-view .message .summary .labels, #conversation-view .message .summary .status, #conversation-view .message .summary .time {
+    background: #fff;
+}
+#conversation-view .message .details {
+    background: #fff;
+}
+#conversation-view .message .summary {
+    background: #fff;
+}
+#conversation-view .message .summary .time::after {
+    background: none;
+}
+nav.toolbarDesktop-container.pm_toolbar.pm_toolbar_withSelector {
+    background: #fff;
+}
+.messageExtra-container>[class*='-container'] {
+    background: #fff;
+}
+.paginator-disabled-main .paginator-dropdown, .paginator-disabled-next .paginator-btn-next, .paginator-disabled-previous .paginator-btn-previous {
+    pointer-events: none;
+    color: #555;
+    box-shadow: inset 0 0 50rem 0 #fff;
+}
+.storageBar .storageBar-progress {
+    height: 100%;
+    background-color: #ec6446;
+}
